tooling/nargo_cli/tests/snapshots/execution_success/signed_arithmetic/execute__tests__force_brillig_false_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "integer",
          "sign": "signed",
          "width": 32
        },
        "visibility": "private"
      },
      {
        "name": "y",
        "type": {
          "kind": "integer",
          "sign": "signed",
          "width": 32
        },
        "visibility": "private"
      },
      {
        "name": "z",
        "type": {
          "kind": "integer",
          "sign": "signed",
          "width": 32
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "361444214588792908": {
        "error_kind": "string",
        "string": "attempt to multiply with overflow"
      },
      "1998584279744703196": {
        "error_kind": "string",
        "string": "attempt to subtract with overflow"
      },
      "14990209321349310352": {
        "error_kind": "string",
        "string": "attempt to add with overflow"
      }
    }
  },
  "bytecode": [
    "func 0",
    "current witness index : _105",
    "private parameters indices : [_0, _1, _2]",
    "public parameters indices : []",
    "return value indices : []",
    "BLACKBOX::RANGE [(_0, 32)] []",
    "BLACKBOX::RANGE [(_1, 32)] []",
    "BLACKBOX::RANGE [(_2, 32)] []",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _0) (1, _1) 0 ], EXPR [ 4294967296 ]], outputs: [_3, _4]",
    "BLACKBOX::RANGE [(_3, 1)] []",
    "EXPR [ (1, _0) (1, _1) (-4294967296, _3) (-1, _4) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _0) 2147483648 ], EXPR [ 4294967296 ]], outputs: [_5, _6]",
    "BLACKBOX::RANGE [(_5, 1)] []",
    "BLACKBOX::RANGE [(_6, 32)] []",
    "EXPR [ (1, _0) (-4294967296, _5) (-1, _6) 2147483648 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _1) 2147483648 ], EXPR [ 4294967296 ]], outputs: [_7, _8]",
    "BLACKBOX::RANGE [(_7, 1)] []",
    "BLACKBOX::RANGE [(_8, 32)] []",
    "EXPR [ (1, _1) (-4294967296, _7) (-1, _8) 2147483648 ]",
    "EXPR [ (-1, _5) (1, _7) (-1, _9) 0 ]",
    "BRILLIG CALL func 1: inputs: [EXPR [ (1, _9) 0 ]], outputs: [_10]",
    "EXPR [ (1, _9, _10) (1, _11) -1 ]",
    "EXPR [ (1, _9, _11) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _4) 2147483648 ], EXPR [ 4294967296 ]], outputs: [_12, _13]",
    "BLACKBOX::RANGE [(_12, 1)] []",
    "BLACKBOX::RANGE [(_13, 32)] []",
    "EXPR [ (1, _4) (-4294967296, _12) (-1, _13) 2147483648 ]",
    "EXPR [ (1, _5) (-1, _12) (-1, _14) 0 ]",
    "BRILLIG CALL func 1: inputs: [EXPR [ (1, _14) 0 ]], outputs: [_15]",
    "EXPR [ (1, _14, _15) (1, _16) -1 ]",
    "EXPR [ (1, _14, _16) 0 ]",
    "EXPR [ (1, _11, _16) (-1, _11) 0 ]",
    "EXPR [ (1, _4) -13 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (-1, _1) 8589934592 ], EXPR [ 4294967296 ]], outputs: [_17, _18]",
    "BLACKBOX::RANGE [(_17, 2)] []",
    "BLACKBOX::RANGE [(_18, 32)] []",
    "EXPR [ (-1, _1) (-4294967296, _17) (-1, _18) 8589934592 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _18) 2147483648 ], EXPR [ 4294967296 ]], outputs: [_19, _20]",
    "BLACKBOX::RANGE [(_19, 1)] []",
    "BLACKBOX::RANGE [(_20, 32)] []",
    "EXPR [ (1, _18) (-4294967296, _19) (-1, _20) 2147483648 ]",
    "EXPR [ (-1, _7, _19) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _0) (1, _18) 0 ], EXPR [ 4294967296 ]], outputs: [_21, _22]",
    "BLACKBOX::RANGE [(_21, 1)] []",
    "EXPR [ (1, _0) (1, _18) (-4294967296, _21) (-1, _22) 0 ]",
    "EXPR [ (-1, _5) (1, _19) (-1, _23) 0 ]",
    "BRILLIG CALL func 1: inputs: [EXPR [ (1, _23) 0 ]], outputs: [_24]",
    "EXPR [ (1, _23, _24) (1, _25) -1 ]",
    "EXPR [ (1, _23, _25) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _22) 2147483648 ], EXPR [ 4294967296 ]], outputs: [_26, _27]",
    "BLACKBOX::RANGE [(_26, 1)] []",
    "BLACKBOX::RANGE [(_27, 32)] []",
    "EXPR [ (1, _22) (-4294967296, _26) (-1, _27) 2147483648 ]",
    "EXPR [ (1, _5) (-1, _26) (-1, _28) 0 ]",
    "BRILLIG CALL func 1: inputs: [EXPR [ (1, _28) 0 ]], outputs: [_29]",
    "EXPR [ (1, _28, _29) (1, _30) -1 ]",
    "EXPR [ (1, _28, _30) 0 ]",
    "EXPR [ (1, _25, _30) (-1, _25) 0 ]",
    "EXPR [ (1, _22) -4294967293 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _2) (-1, _18) 8589934592 ], EXPR [ 4294967296 ]], outputs: [_31, _32]",
    "BLACKBOX::RANGE [(_31, 2)] []",
    "EXPR [ (1, _2) (-1, _18) (-4294967296, _31) (-1, _32) 8589934592 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _2) 2147483648 ], EXPR [ 4294967296 ]], outputs: [_33, _34]",
    "BLACKBOX::RANGE [(_33, 1)] []",
    "BLACKBOX::RANGE [(_34, 32)] []",
    "EXPR [ (1, _2) (-4294967296, _33) (-1, _34) 2147483648 ]",
    "EXPR [ (-1, _19) (-1, _33) (-1, _35) 1 ]",
    "BRILLIG CALL func 1: inputs: [EXPR [ (1, _35) 0 ]], outputs: [_36]",
    "EXPR [ (1, _35, _36) (1, _37) -1 ]",
    "EXPR [ (1, _35, _37) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _32) 2147483648 ], EXPR [ 4294967296 ]], outputs: [_38, _39]",
    "BLACKBOX::RANGE [(_38, 1)] []",
    "BLACKBOX::RANGE [(_39, 32)] []",
    "EXPR [ (1, _32) (-4294967296, _38) (-1, _39) 2147483648 ]",
    "EXPR [ (1, _33) (-1, _38) (-1, _40) 0 ]",
    "BRILLIG CALL func 1: inputs: [EXPR [ (1, _40) 0 ]], outputs: [_41]",
    "EXPR [ (1, _40, _41) (1, _42) -1 ]",
    "EXPR [ (1, _40, _42) 0 ]",
    "EXPR [ (1, _37, _42) (-1, _37) 0 ]",
    "EXPR [ (1, _32) -4294967289 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (-1, _0) 8589934592 ], EXPR [ 4294967296 ]], outputs: [_43, _44]",
    "BLACKBOX::RANGE [(_43, 2)] []",
    "BLACKBOX::RANGE [(_44, 32)] []",
    "EXPR [ (-1, _0) (-4294967296, _43) (-1, _44) 8589934592 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _44) 2147483648 ], EXPR [ 4294967296 ]], outputs: [_45, _46]",
    "BLACKBOX::RANGE [(_45, 1)] []",
    "BLACKBOX::RANGE [(_46, 32)] []",
    "EXPR [ (1, _44) (-4294967296, _45) (-1, _46) 2147483648 ]",
    "EXPR [ (-1, _5, _45) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (-1, _18) 8589934592 ], EXPR [ 4294967296 ]], outputs: [_47, _48]",
    "BLACKBOX::RANGE [(_47, 2)] []",
    "BLACKBOX::RANGE [(_48, 32)] []",
    "EXPR [ (-1, _18) (-4294967296, _47) (-1, _48) 8589934592 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _48) 2147483648 ], EXPR [ 4294967296 ]], outputs: [_49, _50]",
    "BLACKBOX::RANGE [(_49, 1)] []",
    "BLACKBOX::RANGE [(_50, 32)] []",
    "EXPR [ (1, _48) (-4294967296, _49) (-1, _50) 2147483648 ]",
    "EXPR [ (-1, _19, _49) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _44) (-1, _48) 8589934592 ], EXPR [ 4294967296 ]], outputs: [_51, _52]",
    "BLACKBOX::RANGE [(_51, 2)] []",
    "EXPR [ (1, _44) (-1, _48) (-4294967296, _51) (-1, _52) 8589934592 ]",
    "EXPR [ (-1, _45) (-1, _49) (-1, _53) 1 ]",
    "BRILLIG CALL func 1: inputs: [EXPR [ (1, _53) 0 ]], outputs: [_54]",
    "EXPR [ (1, _53, _54) (1, _55) -1 ]",
    "EXPR [ (1, _53, _55) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _52) 2147483648 ], EXPR [ 4294967296 ]], outputs: [_56, _57]",
    "BLACKBOX::RANGE [(_56, 1)] []",
    "BLACKBOX::RANGE [(_57, 32)] []",
    "EXPR [ (1, _52) (-4294967296, _56) (-1, _57) 2147483648 ]",
    "EXPR [ (1, _45) (-1, _56) (-1, _58) 0 ]",
    "BRILLIG CALL func 1: inputs: [EXPR [ (1, _58) 0 ]], outputs: [_59]",
    "EXPR [ (1, _58, _59) (1, _60) -1 ]",
    "EXPR [ (1, _58, _60) 0 ]",
    "EXPR [ (1, _55, _60) (-1, _55) 0 ]",
    "EXPR [ (1, _52) -4294967283 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (-1, _48) 8589934592 ], EXPR [ 4294967296 ]], outputs: [_61, _62]",
    "BLACKBOX::RANGE [(_61, 2)] []",
    "BLACKBOX::RANGE [(_62, 32)] []",
    "EXPR [ (-1, _48) (-4294967296, _61) (-1, _62) 8589934592 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _62) 2147483648 ], EXPR [ 4294967296 ]], outputs: [_63, _64]",
    "BLACKBOX::RANGE [(_63, 1)] []",
    "BLACKBOX::RANGE [(_64, 32)] []",
    "EXPR [ (1, _62) (-4294967296, _63) (-1, _64) 2147483648 ]",
    "EXPR [ (-1, _49, _63) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _44, _62) 0 ], EXPR [ 4294967296 ]], outputs: [_65, _66]",
    "BLACKBOX::RANGE [(_65, 32)] []",
    "EXPR [ (1, _44, _62) (-4294967296, _65) (-1, _66) 0 ]",
    "EXPR [ (-1, _45) (1, _63) (-1, _67) 0 ]",
    "BRILLIG CALL func 1: inputs: [EXPR [ (1, _67) 0 ]], outputs: [_68]",
    "EXPR [ (1, _67, _68) (1, _69) -1 ]",
    "EXPR [ (1, _67, _69) 0 ]",
    "EXPR [ (-2, _44, _45) (1, _44) (4294967296, _45) (-1, _70) 0 ]",
    "EXPR [ (-2, _62, _63) (1, _62) (4294967296, _63) (-1, _71) 0 ]",
    "EXPR [ (1, _70, _71) (-1, _72) 0 ]",
    "BLACKBOX::RANGE [(_72, 32)] []",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _69) (1, _72) 2147483647 ], EXPR [ 4294967296 ]], outputs: [_73, _74]",
    "BLACKBOX::RANGE [(_74, 32)] []",
    "EXPR [ (1, _69) (1, _72) (-4294967296, _73) (-1, _74) 2147483647 ]",
    "EXPR [ (-1, _73) 0 ]",
    "EXPR [ (1, _66) -40 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _44) 0 ], EXPR [ 2147483648 ]], outputs: [_75, _76]",
    "BLACKBOX::RANGE [(_75, 1)] []",
    "BLACKBOX::RANGE [(_76, 31)] []",
    "EXPR [ (1, _44) (-2147483648, _75) (-1, _76) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _44) 0 ], EXPR [ 2147483648 ]], outputs: [_77, _78]",
    "BLACKBOX::RANGE [(_77, 1)] []",
    "BLACKBOX::RANGE [(_78, 31)] []",
    "EXPR [ (1, _44) (-2147483648, _77) (-1, _78) 0 ]",
    "BRILLIG CALL func 1: inputs: [EXPR [ (-2, _44, _75) (1, _44) (4294967296, _75) 0 ]], outputs: [_79]",
    "EXPR [ (-2, _44, _75) (1, _44) (4294967296, _75) (-1, _80) 0 ]",
    "EXPR [ (1, _79, _80) -1 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (-2, _44, _77) (1, _44) (4294967296, _77) 0 ], EXPR [ (1, _80) 0 ]], outputs: [_81, _82]",
    "BLACKBOX::RANGE [(_81, 32)] []",
    "BLACKBOX::RANGE [(_82, 32)] []",
    "EXPR [ (1, _80) (-1, _82) (-1, _83) -1 ]",
    "BLACKBOX::RANGE [(_83, 32)] []",
    "EXPR [ (-2, _44, _77) (-1, _80, _81) (1, _44) (4294967296, _77) (-1, _82) 0 ]",
    "EXPR [ (-1, _81) (-1, _84) 2147483648 ]",
    "EXPR [ (-2, _75, _77) (1, _75) (1, _77) (-1, _85) 0 ]",
    "BRILLIG CALL func 1: inputs: [EXPR [ (1, _81) 0 ]], outputs: [_86]",
    "EXPR [ (1, _81, _86) (1, _87) -1 ]",
    "EXPR [ (1, _81, _87) 0 ]",
    "EXPR [ (2, _84, _85) (1, _81) (-1, _88) 0 ]",
    "EXPR [ (-1, _87) (-1, _89) 1 ]",
    "BRILLIG CALL func 1: inputs: [EXPR [ (1, _82) 0 ]], outputs: [_90]",
    "EXPR [ (1, _82, _90) (1, _91) -1 ]",
    "EXPR [ (1, _82, _91) 0 ]",
    "EXPR [ (-2, _77, _82) (4294967296, _77) (1, _82) (-1, _92) 0 ]",
    "EXPR [ (-1, _91) (-1, _93) 1 ]",
    "EXPR [ (1, _88, _89) (-1, _94) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _94, _62) 0 ], EXPR [ 4294967296 ]], outputs: [_95, _96]",
    "BLACKBOX::RANGE [(_95, 32)] []",
    "EXPR [ (1, _62, _94) (-4294967296, _95) (-1, _96) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _94) 2147483648 ], EXPR [ 4294967296 ]], outputs: [_97, _98]",
    "BLACKBOX::RANGE [(_97, 1)] []",
    "BLACKBOX::RANGE [(_98, 32)] []",
    "EXPR [ (1, _94) (-4294967296, _97) (-1, _98) 2147483648 ]",
    "EXPR [ (1, _63) (-1, _97) (-1, _99) 0 ]",
    "BRILLIG CALL func 1: inputs: [EXPR [ (1, _99) 0 ]], outputs: [_100]",
    "EXPR [ (1, _99, _100) (1, _101) -1 ]",
    "EXPR [ (1, _99, _101) 0 ]",
    "EXPR [ (-2, _94, _97) (1, _94) (4294967296, _97) (-1, _102) 0 ]",
    "EXPR [ (1, _71, _102) (-1, _103) 0 ]",
    "BLACKBOX::RANGE [(_103, 32)] []",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _101) (1, _103) 2147483647 ], EXPR [ 4294967296 ]], outputs: [_104, _105]",
    "BLACKBOX::RANGE [(_105, 32)] []",
    "EXPR [ (1, _101) (1, _103) (-4294967296, _104) (-1, _105) 2147483647 ]",
    "EXPR [ (-1, _104) 0 ]",
    "EXPR [ (1, _96) -4294967288 ]",
    "unconstrained func 0",
    "[Const { destination: Direct(10), bit_size: Integer(U32), value: 2 }, Const { destination: Direct(11), bit_size: Integer(U32), value: 0 }, CalldataCopy { destination_address: Direct(0), size_address: Direct(10), offset_address: Direct(11) }, BinaryFieldOp { destination: Direct(2), op: IntegerDiv, lhs: Direct(0), rhs: Direct(1) }, BinaryFieldOp { destination: Direct(1), op: Mul, lhs: Direct(2), rhs: Direct(1) }, BinaryFieldOp { destination: Direct(1), op: Sub, lhs: Direct(0), rhs: Direct(1) }, Mov { destination: Direct(0), source: Direct(2) }, Stop { return_data: HeapVector { pointer: Direct(11), size: Direct(10) } }]",
    "unconstrained func 1",
    "[Const { destination: Direct(21), bit_size: Integer(U32), value: 1 }, Const { destination: Direct(20), bit_size: Integer(U32), value: 0 }, CalldataCopy { destination_address: Direct(0), size_address: Direct(21), offset_address: Direct(20) }, Const { destination: Direct(2), bit_size: Field, value: 0 }, BinaryFieldOp { destination: Direct(3), op: Equals, lhs: Direct(0), rhs: Direct(2) }, JumpIf { condition: Direct(3), location: 8 }, Const { destination: Direct(1), bit_size: Field, value: 1 }, BinaryFieldOp { destination: Direct(0), op: Div, lhs: Direct(1), rhs: Direct(0) }, Stop { return_data: HeapVector { pointer: Direct(20), size: Direct(21) } }]"
  ],
  "debug_symbols": "[debug_symbols]",
  "file_map": "[file_map]",
  "names": [
    "main"
  ],
  "brillig_names": [
    "directive_integer_quotient",
    "directive_invert"
  ]
}
